syntax = "proto3";

option csharp_namespace = "GrpcHw.Task2.Client";
import "google/protobuf/empty.proto";
package secret;

service SecretService {
  rpc GetSecret(google.protobuf.Empty) returns(GetSecretResponse);
}


message GetSecretResponse {
  string secret = 1;
}